--- a/html/ex_1.html
+++ b/html/ex_1.html
@@ -2,7 +2,7 @@
 <html class="html">
 <head>
 	<link rel="stylesheet" type="text/css" href="../css/ex_1.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 	<title>Example&nbsp;1:&nbsp;Resume</title>
 </head>
